--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -62,6 +62,21 @@
   }
 }
 
+.subtitle {
+  font-size: 2rem;
+  line-height: 1;
+  font-weight: 800;
+  letter-spacing: -0.025em;
+  margin: 0;
+  color: white;
+}
+
+@media (min-width: 640px) {
+  .subtitle {
+    font-size: 3rem;
+  }
+}
+
 .pinkSpan {
   color: hsl(280 100% 70%);
 }
@@ -85,7 +100,7 @@
 }
 
 .card {
-  max-width: 20rem;
+  max-width: 30rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
